--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <hr />
 
 <h3><a href="../4.3 HTML Porfolio Project/public/birthday-invite.html" > Migu Cantik Burthday</a></h3>  
-    <img src="../4.3 HTML Porfolio Project/assets/images/bday.png" height="200" alt="Bday Invitation " />
+    <img src="../4.3 HTML Porfolio Project/assets/images/bday.PNG" height="200" alt="Bday Invitation " />
 <h3> <a href="../4.3 HTML Porfolio Project/public/contact.html">Migu contact</a></h3>
-    <img src="../4.3 HTML Porfolio Project/assets/images/contact.png" height="200" alt="Contact"/>
+    <img src="../4.3 HTML Porfolio Project/assets/images/contact.PNG" height="200" alt="Contact"/>
 <h3> <a href="../4.3 HTML Porfolio Project/public/movie-ranking.html ">Movie Ranking Migue Vers</a></h3>
-    <img src="../4.3 HTML Porfolio Project/assets/images/movie.png" height="200" alt="Movie" />
+    <img src="../4.3 HTML Porfolio Project/assets/images/movie.PNG" height="200" alt="Movie" />
     
 </body>
 </html>
