--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <h2>Web developer project </h2>
 <hr />
 
-<h3><a href="./public/birthday-invite.html" > Migu Cantik Burthday</a></h3>  
-    <img src="./assets/images/bday.png" class="img-responsive" height="200" alt="Bday Invitation " />
+<h3><a href="../public/birthday-invite.html" > Migu Cantik Burthday</a></h3>  
+    <img src="../assets/images/bday.png" height="200" alt="Bday Invitation " />
 <h3> <a href="../4.3 HTML Porfolio Project/public/contact.html">Migu contact</a></h3>
     <img src="../4.3 HTML Porfolio Project/assets/images/Contact.png" height="200" alt="Contact"/>
 <h3> <a href="../4.3 HTML Porfolio Project/public/movie-ranking.html ">Movie Ranking Migue Vers</a></h3>
