--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <h3><a href="../public/birthday-invite.html" > Migu Cantik Burthday</a></h3>  
     <img src="../assets/images/bday.png" height="200" alt="Bday Invitation " />
 <h3> <a href="../public/contact.html">Migu contact</a></h3>
-    <img src="../assets/images/Contact.png" height="200" alt="Contact"/>
+    <img src="../assets/images/contact.png" height="200" alt="Contact"/>
 <h3> <a href="../public/movie-ranking.html ">Movie Ranking Migue Vers</a></h3>
-    <img src="../assets/images/Movie.png" height="200" alt="Movie" />
+    <img src="../assets/images/movie.png" height="200" alt="Movie" />
     
 </body>
 </html>
