--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <h3><a href="/public/birthday-invite.html" > Migu Cantik Burthday</a></h3>  
     <img src="../assets/images/bday.png" height="200" alt="Bday Invitation " />
-<h3><a href="./public/contact.html">Migu contact</a></h3>
+<h3><a href="/public/contact.html">Migu contact</a></h3>
     <img src="../assets/images/contact.png" height="200" alt="Contact"/>
-<h3><a href="./public/movie-ranking.html">Movie Ranking Migue Vers</a></h3>
+<h3><a href="/public/movie-ranking.html">Movie Ranking Migue Vers</a></h3>
     <img src="../assets/images/movie.png" height="200" alt="Movie" />
     
 </body>
