--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <h2>Web developer project </h2>
 <hr />
 
-<h3><a href="/public/birthday-invite.html" > Migu Cantik Burthday</a></h3>  
-    <img src="../assets/images/bday.png" height="200" alt="Bday Invitation " />
+<h3><a href="./public/birthday-invite.html" > Migu Cantik Burthday</a></h3>  
+    <img src="../images/bday.png" height="200" alt="Bday Invitation " />
 <h3><a href="./public/contact.html">Migu contact</a></h3>
     <img src="../assets/images/contact.png" height="200" alt="Contact"/>
 <h3><a href="./public/movie-ranking.html">Movie Ranking Migue Vers</a></h3>
