--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h2>Web developer project </h2>
 <hr />
 
-<h3><a href="../public/birthday-invite.html" > Migu Cantik Burthday</a></h3>  
+<h3><a href="./public/birthday-invite.html" > Migu Cantik Burthday</a></h3>  
     <img src="./assets/images/bday.png" height="200" alt="Bday Invitation " />
 <h3><a href="../public/contact.html">Migu contact</a></h3>
     <img src="./assets/images/contact.png" height="200" alt="Contact"/>
